# aig-cube

./: README.md  pyproject.toml
aig_cube/: aig_parser.py  circuit_instance.py  cnf.py  remove_constant_gates.py  sat.py  solver.py
data/aig_test/: 100_50.aig  16_4.aig  3300_4.aig  4300_4.aig  5_6.aig  6700_4.aig  72_4.aig  96_4_sat.aig  9900_4.aig  BvP_4_3-aigmiter.aig  BvP_4_4-aigmiter.aig  BvP_7_4-aigmiter.aig  BvS_3_3-aigmiter.aig  BvS_6_4-aigmiter.aig  MOD3_1_hard_sat.aig  MOD3_49_sat.aig  MOD3_54.aig  MOD3_77_sat.aig  MOD3_NW_4.aig  MOD3_low_density_1_sat.aig  PvS_4_3-aigmiter.aig  hamming10-2_sat.aig  logVn_2.aig  logVn_4.aig  logVn_6.aig  logVn_8.aig  miter_123.aig  miter_129.aig  miter_16.aig  miter_174.aig  miter_188.aig  miter_197.aig  miter_26.aig  miter_3.aig  miter_33.aig  miter_46.aig  miter_6.aig  miter_68.aig  miter_8.aig  miter_85.aig  (+30 more)
data/miters/: mul_10_column_vs_dadda.aig  mul_10_column_vs_karatsuba.aig  mul_10_column_vs_wallace.aig  mul_10_dadda_vs_karatsuba.aig  mul_10_dadda_vs_wallace.aig  mul_10_karatsuba_vs_wallace.aig  mul_11_column_vs_dadda.aig  mul_11_column_vs_karatsuba.aig  mul_11_column_vs_wallace.aig  mul_11_dadda_vs_karatsuba.aig  mul_11_dadda_vs_wallace.aig  mul_11_karatsuba_vs_wallace.aig  mul_12_column_vs_dadda.aig  mul_12_column_vs_karatsuba.aig  mul_12_column_vs_wallace.aig  mul_12_dadda_vs_karatsuba.aig  mul_12_dadda_vs_wallace.aig  mul_12_karatsuba_vs_wallace.aig  mul_13_column_vs_dadda.aig  mul_13_column_vs_karatsuba.aig  (+100 more)
scripts/: make_cubes.py  solve_external.py  solve_internal.py
tests/: test_bench.py  test_solver.py
