[tool.poetry]
name = "aig-cube"
version = "0.1.0"
description = "Cube-and-Conquer CircuitSAT solver"
authors = ["Vsevolod Vaskin <vsevolod@vaskin.me>"]
readme = "README.md"
packages = [{include = "aig_cube"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
python-sat = ">=1.8.dev13"
cirbo = ">=0.1.0"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "heavy: marks tests as heavy/slow (deselect with '-m \"not heavy\"')",
]
